tests/error/initializing_nested_compound_using_designator_has_to_increment_member_index_by_more_than_one.c
// fail "Too many initializers for structure 's'."

struct s{
    union u{
        int arst;
        int arst2;
    };
};

int main(){
    struct s u = {.arst = 1, 2};
}
